2008-03-25  Paolo Borelli  <pborelli@katamail.com>

	* daemon/gvfsbackendtrash.c (add_extra_trash_info):
	Make sure the display name is correct even for subdirectories
	inside the trash. (#523127)

2008-03-25  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsbackendarchive.c (archive_file_set_info_from_entry):
	Better mount icons and root display name.

2008-03-24  A. Walton  <awalton@svn.gnome.org>

	* configure.ac:
	The CDDA backend requires HAL to build.
	Closes bug #524062.

2008-03-22  Christian Kellner  <gicmo@gnome.org>

	* client/Makefile.am:
	* configure.ac:
	* gconf/Makefile.am:
	* hal/Makefile.am:
	Respect the giomoduledir provided in gio's package config
	file. (#523852 and maybe #523039)

2008-03-20  Tomas Bzatek  <tbzatek@redhat.com>

	* daemon/gvfsbackendsmb.c:
	* daemon/gvfsbackendsmbbrowse.c:
	* daemon/libsmb-compat.h:
	Port to new smbclient API introduced in samba-3.2.0pre2

2008-03-19  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsjobenumerate.c (send_reply): 
	* daemon/gvfsjobdbus.c (send_reply):
	Add job pointer to output spew to make it possible
	to match lines.

2008-03-19  Sebastian Dröge  <slomo@circular-chaos.org>

	* daemon/gvfsbackendsftp.c: (handle_login): Make the sftp backend
	work when pam_krb5 is used on the server side.

2008-03-18  Christian Kellner  <gicmo@gnome.org>

	* configure.ac: Post release version bump.

=== gvfs 0.2.1 ===

2008-03-17  Christian Kellner  <gicmo@gnome.org>

	* NEWS: Update for release

2008-03-17  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsbackendftp.c (do_mount):
	Correctly handle username in mountspec. Only set it if
	it was in the requested mountspec (and only to that value).
	Fixes #522449

2008-03-17  Christian Kellner  <gicmo@gnome.org>

	* client/gdaemonfile.c: (find_enclosing_mount_cb): Don't unref
	mount_info since we don't one a ref. (#522919)

2008-03-17  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: